--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sjayamal/onepaylk",
+    "name": "iwxModules/NEW",
     "description": "OP-Lib is onePay srilanka payment gateway supporting libries for the php language,It can make easier your data verification and gateway configurations.",
     "type": "library",
     "require": {
